<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="task"
            type="gal.uvigo.taskmanager.Task"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title"
                    android:text="@={task.title}"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:text="@={task.description}"
                    android:inputType="textMultiLine"/>

                <AutoCompleteTextView
                    android:id="@+id/autoCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_category"/>

                <EditText
                    android:id="@+id/editDueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_due_date"
                    android:focusable="false"
                    android:clickable="true"
                    android:text="@={task.dueDate}" />

                <CheckBox
                    android:id="@+id/checkboxIsDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete"/>

            </LinearLayout>
        </ScrollView>

        <!-- FAB para guardar -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSaveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/save"
            app:srcCompat="@drawable/ic_save"
            app:fabSize="normal"
            app:tooltipText="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
